# openvort

./: .cproject  .gitignore  .project  4point.wxmx  CMakeLists.txt  Makefile  README  config.cfg  config_oneloop.cfg  config_wall.cfg  doxygen_conf  example_config.cfg  simple.cfg  simple_spherical.cfg  tangle.c  tangle.h  util.c  util.h  vec3_maths.c  vec3_maths.h  vortex_constants.h  vortex_dynamics.c  vortex_dynamics.h  vortex_utils.c  vortex_utils.h  vortices  vortices.c
html/: annotated.html  classes.html  files.html  graph_legend.html  index.html  struct__vspline.html  structlist.html  structlist__coll__graph.dot  structlist__coll__graph.md5  structlist__elem.html  structlist__elem__coll__graph.dot  structlist__elem__coll__graph.md5  structneighbour__t.html  structtangle__state.html  structtangle__state__coll__graph.dot  structtangle__state__coll__graph.md5  structvec3d.html  tangle_8h_source.html  util_8h_source.html  vec3__maths_8h_source.html  vortex__constants_8h_source.html  vortex__utils_8h_source.html
include/: configuration.h  external_velocity.h  initial_conditions.h  normal_fluid.h  octree.h  tangle.h  util.h  vec3_maths.h  vortex_constants.h  vortex_dynamics.h  vortex_injection.h  vortex_utils.h
latex/: annotated.tex  refman.tex  struct__vspline.tex  structlist.tex  structlist.tex.tmp  structlist__coll__graph.dot  structlist__coll__graph.md5  structlist__elem.tex  structlist__elem__coll__graph.dot  structlist__elem__coll__graph.md5  structneighbour__t.tex  structtangle__state.tex  structtangle__state__coll__graph.dot  structvec3d.tex  (+1 more)
python/: draw.py  (+16 more)
(+34 files in other folders)
